FilesApp show error dialog when opening Downloads files with Crostini app

* Updated FindCrostiniTasks to stop filtering for entries outside of
  crostini.
* FilesApp FileTasks.execute takes chrome.fileManagerPrivate.FileTask
  rather than just the taskId so that the task.title is available
  to show in the error dialgo.
* Fixed js docs in file_tasks.js to use correct FileTask rather
  than generic Object.  Added FileTasks.ComboButtonItem type
  which is used by some functions.
* FileTasks.executeInternal_ checks if the selected task type is
  crostini and any of the entries being operated on are not crostini.
  If this is detected, error dialog is shown.
* Updated existing crostini UI tests to assume crostini is enabled
  by default.
* Added crostini.testErrorOpeningDownloadsWithCrostiniApp test
  which verifies error dialog is shown when opening Downloads file
  with crostini app.

Bug: 854858
Cq-Include-Trybots: luci.chromium.try:closure_compilation
Change-Id: Ic89c70bf4bfec3167f329fd3dc3fef40939e2657
Reviewed-on: https://chromium-review.googlesource.com/1116878
Commit-Queue: Joel Hockey <joelhockey@chromium.org>
Reviewed-by: Timothy Loh <timloh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571021}
Former-commit-id: 736d5d189e2c4ed19b4ed07b7d4124da4a982976