ui/file_manager/file_manager/test/crostini.js
@@ -13,12 +13,13 @@ crostini.testCrostiniNotEnabled = (done) => {
             '#directory-tree .tree-item [root-type-icon="crostini"]');
       })
       .then(() => {
+        // Reset crostini back to default enabled=true.
+        chrome.fileManagerPrivate.crostiniEnabled_ = true;
         done();
       });
 };
 
 crostini.testCrostiniSuccess = (done) => {
-  chrome.fileManagerPrivate.crostiniEnabled_ = true;
   const oldMount = chrome.fileManagerPrivate.mountCrostiniContainer;
   let mountCallback = null;
   chrome.fileManagerPrivate.mountCrostiniContainer = (callback) => {
@@ -26,7 +27,6 @@ crostini.testCrostiniSuccess = (done) => {
   };
   test.setupAndWaitUntilReady()
       .then(() => {
-        fileManager.setupCrostini_();
         // Linux Files fake root is shown.
         return test.waitForElement(
             '#directory-tree .tree-item [root-type-icon="crostini"]');
@@ -76,7 +76,6 @@ crostini.testCrostiniSuccess = (done) => {
 };
 
 crostini.testCrostiniError = (done) => {
-  chrome.fileManagerPrivate.crostiniEnabled_ = true;
   const oldMount = chrome.fileManagerPrivate.mountCrostiniContainer;
   // Override fileManagerPrivate.mountCrostiniContainer to return error.
   chrome.fileManagerPrivate.mountCrostiniContainer = (callback) => {
@@ -86,7 +85,6 @@ crostini.testCrostiniError = (done) => {
   };
   test.setupAndWaitUntilReady()
       .then(() => {
-        fileManager.setupCrostini_();
         return test.waitForElement(
             '#directory-tree .tree-item [root-type-icon="crostini"]');
       })
@@ -109,11 +107,9 @@ crostini.testCrostiniError = (done) => {
 };
 
 crostini.testCrostiniMountOnDrag = (done) => {
-  chrome.fileManagerPrivate.crostiniEnabled_ = true;
   chrome.fileManagerPrivate.mountCrostiniContainerDelay_ = 0;
   test.setupAndWaitUntilReady()
       .then(() => {
-        fileManager.setupCrostini_();
         return test.waitForElement(
             '#directory-tree .tree-item [root-type-icon="crostini"]');
       })
@@ -129,6 +125,72 @@ crostini.testCrostiniMountOnDrag = (done) => {
       })
       .then(() => {
         chrome.fileManagerPrivate.removeMount('crostini');
+        return test.waitForElement(
+            '#directory-tree .tree-item [root-type-icon="crostini"]');
+      })
+      .then(() => {
+        done();
+      });
+};
+
+crostini.testErrorOpeningDownloadsWithCrostiniApp = (done) => {
+  // Save old fmp.getFileTasks and replace with version that returns
+  // crostini app and chrome Text app.
+  let oldGetFileTasks = chrome.fileManagerPrivate.getFileTasks;
+  chrome.fileManagerPrivate.getFileTasks = (entries, callback) => {
+    setTimeout(callback, 0, [
+      {
+        taskId: 'text-app-id|app|text',
+        title: 'Text',
+        verb: 'open_with',
+      },
+      {
+        taskId: 'crostini-app-id|crostini|open-with',
+        title: 'Crostini App',
+        verb: 'open_with',
+      }
+    ]);
+  };
+
+  test.setupAndWaitUntilReady()
+      .then(() => {
+        // Right click on 'hello.txt' file, wait for dialog with 'Open with'.
+        assertTrue(
+            test.fakeMouseRightClick('#listitem-' + test.maxListItemId()));
+        return test.waitForElement(
+            'cr-menu-item[command="#open-with"]:not([hidden]');
+      })
+      .then(() => {
+        // Click 'Open with', wait for picker.
+        assertTrue(test.fakeMouseClick('cr-menu-item[command="#open-with"]'));
+        return test.waitForElement('#default-tasks-list');
+      })
+      .then(() => {
+        // Ensure picker shows both options.  Click on 'Crostini App'.  Ensure
+        // error is shown.
+        const list = document.querySelectorAll('#default-tasks-list li div');
+        assertEquals(2, list.length);
+        assertEquals('Open with Crostini App', list[0].innerText);
+        assertEquals('Open with Text', list[1].innerText);
+        assertTrue(test.fakeMouseClick('#default-tasks-list li'));
+        return test.repeatUntil(() => {
+          return document.querySelector('.cr-dialog-title').innerText ===
+              'Unable to open with Crostini App' ||
+              test.pending('Waiting for Unable to open dialog');
+        });
+      })
+      .then(() => {
+        // Validate error messages, click 'OK' to close.  Ensure dialog closes.
+        assertEquals(
+            'To open files with Crostini App, ' +
+                'first copy to Linux Files folder.',
+            document.querySelector('.cr-dialog-text').innerText);
+        assertTrue(test.fakeMouseClick('button.cr-dialog-ok'));
+        return test.waitForElementLost('.cr-dialog-container.shown');
+      })
+      .then(() => {
+        // Restore fmp.getFileTasks.
+        chrome.fileManagerPrivate.getFileTasks = oldGetFileTasks;
         done();
       });
 };
